--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -26,7 +26,7 @@ v0.39.3-dev (SVN)
 + Bug: Potential NPE with charge attacks
 + Bug [#4274]: Game Options Load doesn't update Sever's options
 + Bug [#4275]: Movement envelope not getting cleared at end of turn
-+ Bug: Report phase chat boxes occassionally needed to hit enter twice to send
++ Bug: Report phase chat boxes occasionally needed to hit enter twice to send
 + Bug: SHD Create/Edit Note dialog wouldn't disable key commands (ie. scrolling)
 + Data: New Images, Some unit name changes to eliminate quotation issues with Forth coming Image Pack.
 + Bug: [#4267] Princess thread NPE - calculateMyTurn.
@@ -42,6 +42,8 @@ v0.39.3-dev (SVN)
 + Bug [#4277]: Gravity to-hit clarification
 + Feature [#1291]: Custom Weapon Orders can now be saved/loaded from a file
 + Data: New RATs (3145 Vees)
++ Data: New Images
++ Data: Some Unit fixes (unit name changes to eliminate quotation issues with Forth coming Image Pack)
 
 
 v0.39.2 (2014-09-27 23:51 UTC)
