--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -50,6 +50,8 @@ v0.39.3-dev (SVN)
     LIST_COMMANDS - princessName: listCommands :: Displays a list of available chat commands for Princess.
 + Data: New RATs (War of Reavings - Thanks Greekfire)
 + Data: New Images
++ Bug: Plasma Rifles were receiving pulse and DE damage reductions at extreme
+    and LOS range
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
