--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -57,6 +57,8 @@ v0.39.3-dev (SVN)
     the direct fire energy penalties apply
 + Bug: [#4287] princess.PathRanker.rankPaths IndexOutOfBoundsException
 + Bug: LOS Range was making some short range weapons unable to fire
++ The Game object frequently returns Vectors instead of Lists, work has begun to
+    instead return Lists that are read-only 
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
