--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -62,6 +62,8 @@ v0.39.3-dev (SVN)
 + Added additional heuristics for finding fluff images
 + Data: New Images and Unit Names Fixes
 + Bug: [#4273] Issue with Princess target ChatCommand
++ Refactored quirks to use static constants instead of string literals
+
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
