--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -63,6 +63,7 @@ v0.39.3-dev (SVN)
 + Data: New Images and Unit Names Fixes
 + Bug: [#4273] Issue with Princess target ChatCommand
 + Refactored quirks to use static constants instead of string literals
++ Feature: implemented Battlefists quirk
 
 
 v0.39.2 (2014-09-27 23:51 UTC)
