--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -64,6 +64,7 @@ v0.39.3-dev (SVN)
 + Bug: [#4273] Issue with Princess target ChatCommand
 + Refactored quirks to use static constants instead of string literals
 + Feature: implemented Battlefists quirk
++ Added data for a couple of missing quirks and added page references
 
 
 v0.39.2 (2014-09-27 23:51 UTC)
