--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -65,6 +65,7 @@ v0.39.3-dev (SVN)
 + Refactored quirks to use static constants instead of string literals
 + Feature: implemented Battlefists quirk
 + Added data for a couple of missing quirks and added page references
++ Restricting some quirks to unit types.
 
 
 v0.39.2 (2014-09-27 23:51 UTC)
