--- a/megamek/l10n/megamek/client/messages.properties
+++ b/megamek/l10n/megamek/client/messages.properties
@@ -1386,6 +1386,8 @@ MovementDisplay.BackWardsElevationChange=Moving Backwards over an elevation chan
 MovementDisplay.CarefulStand.title=Careful Stand?
 MovementDisplay.CarefulStand.message=Do you wish to use careful stand?\n
 MovementDisplay.Traitor=Traitor Unit
+MovementDisplay.NotUpToSpeed=Selected unit cannot run/flank because it has poor performance and is not up to speed
+MovementDisplay.UpToSpeed=Selected unit is up to speed so it can run/flank
 MovementType.None=None
 MovementType.Biped=Biped
 MovementType.Quad=Quad
