--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -67,6 +67,7 @@ v0.39.3-dev (SVN)
 + Added data for a couple of missing quirks and added page references
 + Restricting some quirks to unit types.
 + Feature: implemented power reverse quirk
++ Feature: implemented poor performance quirk
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
