--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -69,6 +69,7 @@ v0.39.3-dev (SVN)
 + Feature: implemented power reverse quirk
 + Feature: implemented poor performance quirk
 + Bug [#4290]: Highlight color now reflects movement mode (walk/jump/backup)
++ Bug [#4298]: Melee master ability doesn't grant an extra attack with a hatchet
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
