--- a/trunk/megamek/l10n/megamek/client/messages.properties
+++ b/trunk/megamek/l10n/megamek/client/messages.properties
@@ -1434,7 +1434,7 @@ PhysicalDisplay.ChooseTargetDialog.message=Hex {0} contains the following target
 PhysicalDisplay.ChooseTargetDialog.title=Choose Target
 PhysicalDisplay.club=Club
 PhysicalDisplay.Club=Club
-PhysicalDisplay.ClubDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3}
+PhysicalDisplay.ClubDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3} {4}
 PhysicalDisplay.ClubDialog.title=Club {0}?
 PhysicalDisplay.confirmArm=Confirm you want to use this arm to
 PhysicalDisplay.confirmBrushOff=Confrim Brush Off Attack
@@ -1457,11 +1457,12 @@ PhysicalDisplay.jumpjet=JJ Atk.
 PhysicalDisplay.JumpJetDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3}
 PhysicalDisplay.JumpJetDialog.title=Jump Jet Attack {0}?
 PhysicalDisplay.kick=Kick
-PhysicalDisplay.KickDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3}
+PhysicalDisplay.KickDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3} {4}
 PhysicalDisplay.KickDialog.title=Kick {0}?
 PhysicalDisplay.LAHit=Left Arm to-hit: {0} ({1}%) Damage: {2}
 PhysicalDisplay.More=More...
 PhysicalDisplay.more=More...
+PhysicalDisplay.MeleeMaster=Unit has Melee Master, physical attacks will be applied twice!
 PhysicalDisplay.next=Next Unit 
 PhysicalDisplay.ProtoMechAttackDialog.message=To Hit: {0} ({1}%)   ({2})\nDamage: {3}
 PhysicalDisplay.ProtoMechAttackDialog.title=Protomech frenzy attack at {0}?
@@ -1470,7 +1471,7 @@ PhysicalDisplay.LayExplosivesAttackDialog.message=To Hit: {0} ({1}%)   ({2})
 PhysicalDisplay.LayExplosivesAttackDialog.title=Lay explosives on {0}?
 PhysicalDisplay.explosives=Lay Explosives
 PhysicalDisplay.punch=Punch
-PhysicalDisplay.PunchDialog.message=To Hit [RA]: {0} ({1}%)   ({2})\nDamage [RA]: {3} {4}\n   and/or\nTo Hit [LA]: {5} ({6}%)   ({7})\nDamage [LA]: {8} {9}
+PhysicalDisplay.PunchDialog.message=To Hit [RA]: {0} ({1}%)   ({2})\nDamage [RA]: {3} {4}\n\n   and/or\n\nTo Hit [LA]: {5} ({6}%)   ({7})\nDamage [LA]: {8} {9}
 PhysicalDisplay.PunchDialog.title=Punch {0}?
 PhysicalDisplay.push=Push
 PhysicalDisplay.PushDialog.message=To Hit: {0} ({1}%)   ({2})
