--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -75,6 +75,9 @@ v0.39.3-dev (SVN)
 + Bug [#4293]: Can only save custom weapon order orders, issues with saving
     weapon sort orders (this will invalidate any currently saved weapon sort
     orders)
++ Feature: GameOptionsDialog now has a Search tab, where the user can enter text
+    and any options that contain that text in their name or tooltip will be
+    displayed
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
