--- a/megamek/l10n/megamek/client/messages.properties
+++ b/megamek/l10n/megamek/client/messages.properties
@@ -869,6 +869,8 @@ GameOptionsDialog.optionDescriptionHint=Mouse over an option to see a descriptio
 GameOptionsDialog.Password=Password:
 GameOptionsDialog.title=View/Edit Game Options...
 GameOptionsDialog.Save=Save
+GameOptionsDialog.Search=Search
+GameOptionsDialog.SearchToolTip=Search for options that contain the entered text
 GameOptionsDialog.Load=Load
 
 KeyBinds.cmdNames.scrollN=Scroll North
