--- a/trunk/megamek/l10n/megamek/common/options/messages.properties
+++ b/trunk/megamek/l10n/megamek/common/options/messages.properties
@@ -266,6 +266,8 @@ GameOptionsInfo.option.tacops_advanced_mech_hit_locations.displayableName=TacOps
 GameOptionsInfo.option.tacops_advanced_mech_hit_locations.description=If checked,\nThe TacOps Hit locations will be used for Meks
 GameOptionsInfo.option.tacops_coolant_failure.displayableName=TacOps Heat Sink Coolant Failure
 GameOptionsInfo.option.tacops_coolant_failure.description=Possible for Heat Sink Coolant to become less efficient every time the Unit goes over 5 heat each round.
+GameOptionsInfo.option.tacops_ba_vs_ba.displayableName=TacOps BattleArmor vs BattleArmor Damage
+GameOptionsInfo.option.tacops_ba_vs_ba.description=Increases the effectiveness of certain BA weapons vs other BA, TO pg 109
 GameOptionsInfo.option.no_tac.displayableName=(Unofficial) No through-armor criticals
 GameOptionsInfo.option.no_tac.description=If checked,\nrolls of '2' on hit location will only result in a torso hit,\nand no critical roll.\n Only applies to mechs.\n Supercedes the floating criticals option.\nUnchecked by default.
 GameOptionsInfo.option.vehicles_threshold.displayableName=(Unofficial) Vehicle damage thresholds
