--- a/trunk/megamek/l10n/megamek/client/messages.properties
+++ b/trunk/megamek/l10n/megamek/client/messages.properties
@@ -326,6 +326,9 @@ CFRDomino.Forward=Step forward ({0} MP)
 CFRDomino.Backward=Step backwards ({0} MP)
 CFRDomino.NoAction=No Action
 
+CFRAMSAssign.Title=Assign AMS for {0}
+CFRAMSAssign.Message=Pick which attack the AMS on {0} will target.\n
+
 ClientGUI.BoardPopup=Board Popup...
 ClientGUI.clientTitleSuffix=\ - MegaMek
 ClientGUI.Disconnected.message=You have become disconnected from the server.
