--- a/trunk/megamek/l10n/megamek/common/options/messages.properties
+++ b/trunk/megamek/l10n/megamek/common/options/messages.properties
@@ -53,6 +53,8 @@ GameOptionsInfo.option.year.displayableName=Year the game takes place in
 GameOptionsInfo.option.year.description=This setting determines the availability and techlevel of equipment.
 GameOptionsInfo.option.random_basements.displayableName=Use Random Basements
 GameOptionsInfo.option.random_basements.description=If this setting is turned on, all maps will use random basements
+GameOptionsInfo.option.auto_ams.displayableName=Automatically Assign AMS
+GameOptionsInfo.option.auto_ams.description=When on, Megamek automatically determines AMS assignments based on highest expected damage from missile attacks
 GameOptionsInfo.option.full_rotor_hits.displayableName=(Unofficial) No reduced damage for VTOL rotor hits
 GameOptionsInfo.option.full_rotor_hits.description=If checked, VTOLs will take full damage from a rotor hit instead of Total Warfare-style reduced damage.\n\nUnchecked by default.
 
