--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -81,6 +81,7 @@ v0.39.3-dev (SVN)
 + Bug [#4243]: Added BA vs BA damage optional rule from TO 2nd printing pg 109
 + Bug [#4243]: Updated Flak Ammo per new TO errata
 + Bug [#4098]: Anti-Missile System Manual Engagement
++ Feature [#1324]: Auto target woods hex when no other targets present
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
