--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -84,6 +84,7 @@ v0.39.3-dev (SVN)
 + Feature [#1324]: Auto target woods hex when no other targets present
 + Bug [#4191]: Entity.isImmobile(Entity.java:1223) will throw an NPE if the crew
     is NULL (such as coming from MHQ w/out a crew assigned)
++ Bug [#4303]: Infantry heavy lasers do not display the -1 to hit at range 0
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
