--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -87,7 +87,7 @@ v0.39.3-dev (SVN)
 + Bug [#4303]: Infantry heavy lasers do not display the -1 to hit at range 0
 + Feature: Add Overview, Capability, and Deployment tags, so the unit files could have descriptive text that match the 
 	fields from the published TROs.  No unit files have been changed.
-	
++ Feature [#1323]: AMS now have an Automatic mode when auto AMS rule is off
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
