--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -74,7 +74,6 @@ v0.39.3-dev (SVN)
 + Data: New Images and Unit Names Fixes
 + Bug [#4293]: Can only save custom weapon order orders, issues with saving
     weapon sort orders (this will invalidate any currently saved weapon sort
-+ Bug [#4307]: TacOps BA vs BA weapon damage applied to wrong David Gauss Rifle
     orders)
 + Feature: GameOptionsDialog now has a Search tab, where the user can enter text
     and any options that contain that text in their name or tooltip will be
@@ -90,6 +89,7 @@ v0.39.3-dev (SVN)
 	fields from the published TROs.  No unit files have been changed.
 + Feature [#1323]: AMS now have an Automatic mode when auto AMS rule is off
 + Bug [#4305]: Movepath displays PSR warning for vehicles moving through rubble
++ Bug [#4311] Infantry attempting to kick targets results in hang at end of firing phase
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
