--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -91,6 +91,8 @@ v0.39.3-dev (SVN)
 + Bug [#4305]: Movepath displays PSR warning for vehicles moving through rubble
 + Bug [#4311] Infantry attempting to kick targets results in hang at end of firing phase
 + Bug [#4322]: Next Player Causes UnsupportedOperationException
++ Bug [#4314]: Spot button only enabled when spotter has LoS
++ Bug [#4314]: Units may spot beyond visual range 
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
