--- a/trunk/megamek/docs/history.txt
+++ b/trunk/megamek/docs/history.txt
@@ -92,7 +92,9 @@ v0.39.3-dev (SVN)
 + Bug [#4311] Infantry attempting to kick targets results in hang at end of firing phase
 + Bug [#4322]: Next Player Causes UnsupportedOperationException
 + Bug [#4314]: Spot button only enabled when spotter has LoS
-+ Bug [#4314]: Units may spot beyond visual range 
++ Bug [#4314]: Units may spot beyond visual range
++ Bug [#4316]: NPE when attempting to skip a bot's turn while deploying
+    reinforcements
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
