--- a/megamek/docs/history.txt
+++ b/megamek/docs/history.txt
@@ -95,6 +95,7 @@ v0.39.3-dev (SVN)
 + Bug [#4314]: Units may spot beyond visual range
 + Bug [#4316]: NPE when attempting to skip a bot's turn while deploying
     reinforcements
++ Bug [#4319]: BA with Infantry Support Weapons cannot attack with them
 
 v0.39.2 (2014-09-27 23:51 UTC)
 + Bug [#4238]: Delayed deployment not working in scenario
